--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ VITE_SMTP_HOST="smtp.gmail.com"
 VITE_SMTP_PORT="465"
 VITE_SMTP_USER="aremartins801@gmail.com"
 VITE_SMTP_PASS="dvbamqynchdhdfkt"
+VITE_SMTP_FROM_NAME="SFGS Team"
